changes for graphql

--- a/app/code/LiqpayMagento/LiqPay/view/frontend/web/template/payment/checkout.html
+++ b/app/code/LiqpayMagento/LiqPay/view/frontend/web/template/payment/checkout.html
@@ -42,7 +42,7 @@
                         enable: (getCode() == isChecked())
                         "
                         disabled>
-                    <span data-bind="text: $t('Place Order')"></span>
+                    <span data-bind="text: $t('Place Order with LiqPay')"></span>
                 </button>
             </div>
         </div>
